src/App.css
.App {
  font-family: 'Roboto', sans-serif;
  color: rgb(112, 112, 112);
}

img{
  width: 100%;
  image-rendering: -webkit-optimize-contrast;
}

body {
  position: relative;
}

.btn {
  font-family: 'Anton', sans-serif;
}

.main-Link {
  font-size: 12px;
  letter-spacing: 3px;
  font-family: 'Anton', sans-serif;
}
.md-title {
  max-width: 60px;
  border-radius: 50%;
}

.content-cont {
  background-color: white;
  padding: 15px;
  font-size: 14px;
}

.content-cont2 {
  opacity: 0.9;
  background-color: white;
}

.badges {
  padding: 15px;
}

.badge {
  margin-right: 5px;
}

.text-title-cont {
  position: absolute;
  padding: 15px;
  font-family: 'Anton', sans-serif;
}

.cardContainer {
  background-color: white;
  margin-bottom: 40px;
  padding-left: 0;
  padding-right: 0;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.308), 0 4px 20px 0 rgba(0, 0, 0, 0.288);
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 900;
}

.socialLinks {
  padding-bottom: 40px;
}

.btn-warning {
  margin-bottom: 20px;
}

.mrg-top {
  padding-top: 30px;
}

.inframe {
  margin-bottom: 30px;
  margin-left: auto;
}

.mrg-bootm2 {
  margin-bottom: 80px;
}

.infoTitile {
  color: black;
  font-family: 'Anton', sans-serif;
  font-size: 55px;
}

.Footer {
  position: absolute;
  text-align: center;
  color: rgb(112, 112, 112);
  font-size: 12px;
  width: 100%;
  bottom: 5px;
}

input {
  font-family: 'Courier New', Courier, monospace;
}

textarea {
  font-family: 'Courier New', Courier, monospace;
}

.infoTitile2 {
  color: black;
  font-family: 'Anton', sans-serif;
  font-size: 45px;
}

.infoTitile3 {
  color: black;
  font-family: 'Anton', sans-serif;
  font-size: 30px;
  margin-left: auto;
}
.form-mrgb {
  margin: 40px;
  margin-bottom: 80px;
}

.infoTitile4 {
  color: black;
  text-align: center;
  font-family: 'Anton', sans-serif;
  font-size: 30px;
}

.fullwidth {
  width: 100%;
  background-color: #f5a200;
  padding-top: 90px;
  padding-bottom: 50px;
}

.social {
  width: 25px;
  height: 25px;
  margin-right: 20px;
}

.highContainer {
  min-height: 100vh;
}

.confirmMail {
  color: black;
  font-family: 'Anton', sans-serif;
}

.formContainer {
  position: relative;
}

.linksFormText {
  color: black;
  font-family: 'Anton', sans-serif;
  padding-top: 18px;
  margin-right: 30px;
}

.footerText {
  position: absolute;
  margin-top: 50px;
  bottom: 1px;
  font-size: 12px;
}

.confirmMailWrong {
  color: red;
  font-family: 'Anton', sans-serif;
}

.formtAffter {
  display: flex;
  padding-top: 40px;
  justify-content: center;
  padding-bottom: 80px;
}

.linksafter{
  min-width: 165px;
}

.smallCont {
  max-width: 800px;
  min-height: 600px;
  align-items: center;
}

.mailsent {
  height: 400px;
}

.errorCode {
  position: absolute;
  right: 20px;
  top: 22px;
  font-size: 10px;
  color: red;
}

.errorCode2 {
  position: absolute;
  right: 20px;
  bottom: 20px;
  font-size: 10px;
  color: red;
}

.error {
  border-width: 2px;
  border-color: red;
}

.highContainer2 {
  min-height: 100vh;
  align-items: center;
  padding-top: 100px;
}

.inputContent {
  margin: 10px;
  margin-left: 0px;
}

.highContainer3 {
  min-height: 100vh;
  align-items: center;
}

.dinamicTitle {
  display: block;
}

.dinamicTitle::before {
  content: '';
  animation: animate infinite 5s;
}

@keyframes animate {
  0% {
    content: 'Professional';
    color: blue;
  }
  20% {
    content: 'Readable';
    color: blueviolet;
  }
  40% {
    content: 'Modern';
    color: red;
  }
  60% {
    content: 'Pretty';
    color: orange;
  }
  80% {
    content: 'Reusable';
    color: green;
  }
  100% {
    content: 'Professional';
    color: blue;
  }
}

.main-Link {
  color: #f5a200;
}

a {
  color: rgb(112, 112, 112);
}

a:hover {
  color: black;
}

a:hover {
  text-decoration: none;
}

a::after {
  color: black;
}

.form-control{
  border: 0px;
}

.form-control:focus {
  border-color: black;
  -webkit-box-shadow: 3px 3px 5px 0px rgba(105,105,105,1);
  -moz-box-shadow: 3px 3px 5px 0px rgba(105,105,105,1);
  box-shadow: 3px 3px 5px 0px rgba(105,105,105,1);
}

@media only screen and (min-width: 2000px) {
  .App {
    background-position: 1200px top;
  }
}

@media only screen and (min-width: 1599px) {
  .App {
    background-position: 900px top;
  }
}

@media only screen and (max-width: 1599px) {
  .App {
    background-position: 700px top;
  }
}

@media only screen and (max-width: 1199px) {
  .App {
    background-position: 600px top;
  }
}

@media only screen and (max-width: 767px) {
  .infoTitile3 {
    margin-left: 0px;
  }
  .inframe {
    margin-left: 0px;
  }
}

@media only screen and (max-width: 430px) {
  .infoTitile {
    font-size: 45px;
  }
  .highContainer2 {
    padding-top: 120px;
  }
}

